# DeepLabCut

./: .buildinfo  .codespellrc  .copyright.yml  .gitignore  .pre-commit-config.yaml  181211_CA3692_1Overview_6DeepCut_resnet101_maze_joinedFeb22shuffle1_450000_skeleton.h5  AUTHORS  CODE_OF_CONDUCT.md  COLAB_DLC_ModelZoo.ipynb  COLAB_maDLC_TrainNetwork_VideoAnalysis.ipynb  CONTRIBUTING.html  CONTRIBUTING.md  Colab_DEMO_mouse_openfield.ipynb  CreateProject.py  DEADJOE  DLC_ModelZoo.ipynb  DesignDocumentation.md  Governance.html  HelperFunctions.html  MISSION_AND_VALUES.html  MainApp.py  MainWindow.py  NOTICE.yml  OpenProject.py  Overviewof3D.html  PARQUET_MIGRATION_README.md  POLARS_INTEGRATION_README.md  PROJECT_GUI.html  PYTABLES_TO_POLARS_README.md  README.html  README.md  RTMDet_dev.ipynb  Step3_CheckLabels.ipynb  Step4_GenerateTrainingFileFromLabelledData_demo.ipynb  Using_DeepLabCut_screen_camera_trap_images_with_physical_interactions.ipynb  _config.yml  _toc.yml  analysis_spider.py  analysis_spidermobnet.py  analyze_videos.py  (+78 more)
.circleci/: config.yml  data
.codeboarding/: Advanced_Analysis_Post_processing.md  Core_Deep_Learning_Engine.md  Project_Data_Workflow_Management.md  System_Utilities_Benchmarking.md  User_Interface.md  on_boarding.md
.github/: FUNDING.yml
Analysis-tools/: AnalyzeABunchofPictures.py  AnalyzeVideos.py  AnalyzeVideosAndExtractScoreMaps.py  MakingLabeledVideo.py  MakingLabeledVideo_fast.py  VideoProcessor.py
Evaluation-Tools/: AnalyzeABunchofPictures.py  AnalyzeVideos.py  AnalyzeVideos_OpenCV.py  AnalyzeVideos_SK.py  EvaluateNetwork.py  MakingLabeledVideo.py  MakingLabeledVideo_OpenCV.py  MakingLabeledVideo_SK.py  MakingLabeledVideo_fast.py  PlotEval.py  Step1_EvaluateModelonDataset.py  Step2_AnalysisofResults.py  VideoProcessor.py
Generating_a_Training_Set/: FrameTrimmer.py  Step1_SelectRandomFrames_demo.ipynb  Step1_SelectRandomFrames_fromVideos.py  Step2_1_Splitting_CSV.py  Step2_ConvertingLabels2DataFrame.py  Step2_ConvertingLabels2DataFrame_demo.ipynb  Step3_CheckLabels.ipynb  Step3_CheckLabels.py  Step4_GenerateTrainingFileFromLabelledData.py  Step4_GenerateTrainingFileFromLabelledData_demo.ipynb  auxiliaryfunctions.py  frameselectiontools.py  pose_cfg.yaml
_sources/: MISSION_AND_VALUES.md  README.md  tutorial.md
_static/: sphinx-book-theme.5f77b4aec8189eecf79907ce328c390d.css  sphinx-book-theme.acff12b8f9c144ce68a297486a2fa670.css  sphinx-book-theme.css  sphinx-book-theme.e8f53015daec13862f6db5e763c41738.css
benchmark/: README.md  benchmark_create_shuffle.py  benchmark_ctd_coco_api.py  benchmark_lightning_pose.py  benchmark_madlc.py  benchmark_run_experiments.py  benchmark_train.py  create_train_test_splits.py  lightning_pose_ood_evaluation.py  lightning_pose_tf_eval.py  madlc_evaluation.py  madlc_test_inference.py  projects.py  train_benchmark.py  utils.py  utils_augmentation.py  utils_models.py
benchmark_superanimal/: eval_zeroshot.py  keypoint_space_conversion.py  memory_replay_example.py  superanimal_image_inference.py  train.py  video_adapt_example.py
benchmarking/: QuantificationAssemblyparallel.py  QuantificationAssemblyparallelflexibel.py  plottingparametersweep.py  quantificationutils.py
conda-environments/: DEEPLABCUT.yaml  DEEPLABCUT_M1.yaml  DEEPLABCUT_M2.yaml  DEEPLABCUT_PPC.yaml  DEEPLABCUT_dev.yaml  DLC-CPU-LITE.yaml  DLC-CPU.yaml  DLC-GPU-LITE.yaml  DLC-GPU.yaml  DLC-dev.yaml  DLC2_3_M1.yaml  DLC_MacMini_M1.yaml  DLC_tetra.yaml  README.md  dlc-macOS-CPU.yaml  dlc-ubuntu-GPU.yaml  dlc-ubuntu-dev-GPU.yaml  dlc-uptodate-gpu.yaml  dlc-windowsCPU.yaml  dlc-windowsGPU.yaml  dlc_cuda124.def  dlc_m1.yaml
conda-files/: dlcDependenciesFORWINDOWS.yaml  dlcDependenciesFORWINDOWSwTF.yaml  dlcdependencies.yml  dlcdependencieswTF1.2.yml
deeplabcut/: __init__.py  __main__.py  cli.py  compat.py  inference_cfg.yaml  labeling_toolbox.py  pose_cfg.yaml  reid_cfg.yaml  test_superanimal_change.md  version.py
deeplabcut_gui/: __init__.py  __main__.py  components.py  utils.py  widgets.py  window.py
dev/: index.html  versions.json
dev-docs/: mkdocs.yml
devscripts/: plotting_development.py  testaug.py
docker/: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.core  Dockerfile.gui  Dockerfile.jupyter  Dockerfile.latest-core  Dockerfile.latest-gui  Dockerfile.latest-gui-jupyter  Dockerfile.test  MANIFEST.in  Makefile  README.md  build.sh  deeplabcut-docker.sh  deeplabcut_docker.py  deeplabcut_docker.sh  docker-bake.hcl  interact.sh  motd.sh  push.sh  pyproject.toml  setup.cfg
docker/package/: MANIFEST.in  Makefile  deeplabcut_docker.py  pyproject.toml  setup.cfg
docker/package/changelog/: v0.1.0.md
docs/: Governance.html  Governance.md  HelperFunctions.html  HelperFunctions.md  MISSION_AND_VALUES.html  MISSION_AND_VALUES.md  ModelZoo.html  ModelZoo.md  Overviewof3D.html  Overviewof3D.md  PROJECT_GUI.html  PROJECT_GUI.md  PYTABLES_TO_POLARS_MIGRATION.md  PluginOverview.md  Quickevaluation-guide.md  Quicktraining-guide.md  README.html  README.md  Training-Evaluation.html  Training-Evaluation.md  UseOverviewGuide.html  UseOverviewGuide.md  _config.yml  _toc.yml  analysis-tools.md  beginners-guide.html  beginners-guide.md  benchmark.html  benchmark.md  citation.html  citation.md  contribute.md  convert_maDLC.html  convert_maDLC.md  course.html  course.md  deeplabcutlive.html  deeplabcutlive.md  demo-guide.md  dev.md  (+36 more)
examples/: COLAB_3miceDemo.ipynb  COLAB_DEMO_mouse_openfield.ipynb  COLAB_DLC_ModelZoo.ipynb  COLAB_Human_Project_DEMO.ipynb  COLAB_YOURDATA_TrainNetwork_VideoAnalysis.ipynb  COLAB_maDLC_TrainNetwork_VideoAnalysis.ipynb  Colab_DEMO_mouse_openfield.ipynb  Colab_TPU_TrainNetwork_VideoAnalysis.ipynb  Colab_TrainNetwork_VideoAnalysis.ipynb  DEMO_3D_DeepLabCut.ipynb  DLC_ModelZoo.ipynb  (+55 more)
examples-multianimal/: BenchmarkMultiAnimalDLC3Mice.py  Demo_multi-animalDLC.ipynb  birds.py  demo.py  display_maps_example.py  exampledataset_3mice.py  exampledataset_birds.py  exampledataset_fish_sideview.py  testingconversions_4multi.py  testscript.py  testscript_multi.py  testscript_multianimal.py  visualize_maps.py
(+2391 files in other folders)
