[metadata]
name = deeplabcut_gui
version = 0.0.1
author = A. & M. Mathis Lab
description = DeepLabCut Project Manager GUI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
python_requires = >=3.7
install_requires =
    PySide2
    qdarkstyle
    deeplabcut
    napari-deeplabcut
include_package_data = True

[options.package_data]
deeplabcut_gui.assets = *.png

[options.entry_points]
console_scripts =
    deeplabcut_gui = deeplabcut_gui.__main__:main