[metadata]
name = deeplabcut-docker
version = 0.0.1-alpha
author = A. & M. Mathis Labs
author_email=alexander@deeplabcut.org
description = A helper package to launch DeepLabCut docker images
url = https://github.com/DeepLabCut/DeepLabCut/docker
project_urls =
    Bug Tracker = https://github.com/DeepLabCut/DeepLabCut/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
py_modules = deeplabcut_docker
python_requires = >=3.6

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    deeplabcut-docker = deeplabcut_docker:main

[options.packages.find]
where = .