[metadata]
name = deeplabcut-docker
version = attr: deeplabcut_docker.__version__
author = A. & M. Mathis Labs
author_email = alexander@deeplabcut.org
maintainer = Steffen Schneider
maintainer_email = stes@hey.com
description = A helper package to launch DeepLabCut docker images
url = https://github.com/DeepLabCut/DeepLabCut/tree/main/docker
project_urls =
    Bug Tracker = https://github.com/DeepLabCut/DeepLabCut/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Topic :: Utilities
license = LGPLv3
long_description = file: PYPI_README.md
long_description_content_type = text/markdown
platform = any

[options]
package_dir =
    = . 
py_modules = deeplabcut_docker
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    deeplabcut-docker = deeplabcut_docker:main

[options.packages.find]
where = .

[options.data_files]
bin = deeplabcut_docker.sh

[bdist_wheel]
universal = 1
